tests/out/main.test
Kudo: Syntax Error: (2:13): Not a valid expression
    ----> tests/main.kd
   |
 2 |func main() name {
   |            ^~~~  
Kudo: 1 parsing errors occured
Kudo: compilation aborted
